add sqlite support and restructe project
