# docs/swagger.json
@@ -9,6 +9,41 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/hotel/{id}": {
+            "get": {
+                "description": "get hotel by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "hotels"
+                ],
+                "summary": "Get hotel by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Hotel ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Hotel"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/hotels": {
             "get": {
                 "description": "get hotels",
@@ -25,7 +60,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/database.Hotel"
+                                "$ref": "#/definitions/model.Hotel"
                             }
                         }
                     },
@@ -40,7 +75,7 @@
         }
     },
     "definitions": {
-        "database.Address": {
+        "model.Address": {
             "type": "object",
             "properties": {
                 "city": {
@@ -60,11 +95,11 @@
                 }
             }
         },
-        "database.Hotel": {
+        "model.Hotel": {
             "type": "object",
             "properties": {
                 "address": {
-                    "$ref": "#/definitions/database.Address"
+                    "$ref": "#/definitions/model.Address"
                 },
                 "id": {
                     "type": "string"
@@ -74,12 +109,6 @@
                 },
                 "phone": {
                     "type": "string"
-                },
-                "pois": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
